--- a/index.html
+++ b/index.html
@@ -7,12 +7,29 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    <h1 id="game__title">2084 Tetris Mode</h1>
-    <input type="radio" name="dificultad" value=0>
-    <label for="html">Facil</label>
-    <input type="radio" name="dificultad" value=1>
-    <label for="html">Medio</label>
-    <input type="radio" name="dificultad" value=2>
-    <label for="html">Dificil</label>
+    <div class="container">
+        <div class="heading">
+            <h1 class="title">2084 Tetris Mode</h1>
+            <div class="scores-container">
+                <div class="button">
+                    <h1>Score</h1>
+                </div>
+                <div class="button">
+                    <h1>Best</h1>
+                </div>
+            </div>
+            <div>
+                <input type="radio" name="dificultad" value=0>
+                <label>Facil</label>
+                <input type="radio" name="dificultad" value=1>
+                <label>Medio</label>
+                <input type="radio" name="dificultad" value=2>
+                <label>Dificil</label>
+            </div>
+        </div>
+        <section class="flex-container">
+        </section>
+    </div>
+
 </body>
 </html>
