primeras secciones acomodadas

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
         <div class="heading">
             <h1 class="title">2084 Tetris Mode</h1>
             <div class="scores-container">
-                <div class="button">
+                <div class="button score-c">
                     <h1>Score</h1>
+                    <h1 class="scores-nums">0</h1>
                 </div>
-                <div class="button">
+                <div class="button score-c">
                     <h1>Best</h1>
+                    <h1 class="scores-nums">0</h1>
                 </div>
             </div>
             <div>
@@ -27,7 +29,15 @@
                 <label>Dificil</label>
             </div>
         </div>
-        <section class="flex-container">
+        <section class="pregame-container">
+            <div class="button play-pause">
+                <h1>PLAY</h1>
+                <h1></h1>
+            </div>
+            <div class="button next-tile" id="play-pause_num">
+                <h1>NEXT TILE</h1>
+                <h1></h1>
+            </div>
         </section>
     </div>
 
