--- a/index.html
+++ b/index.html
@@ -30,16 +30,18 @@
             </div>
         </div>
         <section class="pregame-container">
-            <div class="button play-pause">
+            <div class="button" id="play-pause">
                 <h1>PLAY</h1>
                 <h1></h1>
             </div>
-            <div class="button next-tile" id="play-pause_num">
+            <div class="button" id="next-tile">
                 <h1>NEXT TILE</h1>
                 <h1></h1>
             </div>
         </section>
     </div>
+
+    <script src="./game.js"></script>
 
 </body>
 </html>
