--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
                     <h1 class="scores-nums">0</h1>
                 </div>
             </div>
-            <div>
-                <input type="radio" name="dificultad" value=0>
-                <label>Facil</label>
-                <input type="radio" name="dificultad" value=1>
-                <label>Medio</label>
-                <input type="radio" name="dificultad" value=2>
-                <label>Dificil</label>
+            <div class="radiobutton">
+                <input type="radio" id="facil" name="dificultad" value=0>
+                <label for="facil">Fácil</label>
+                <input type="radio" id="medio" name="dificultad" value=1>
+                <label for="medio">Medio</label>
+                <input type="radio" id="dificil" name="dificultad" value=2>
+                <label for="dificil">Difícil</label>
             </div>
         </div>
         <section class="pregame-container">
             <div class="button" id="play-pause">
-                <h1>PLAY</h1>
+                <h1 id="header_play-pause">PLAY</h1>
                 <h1></h1>
             </div>
             <div class="button" id="next-tile">
-                <h1>NEXT TILE</h1>
+                <h1 id="header_next-tile">NEXT TILE</h1>
                 <h1></h1>
             </div>
         </section>
