--- a/index.html
+++ b/index.html
@@ -39,6 +39,32 @@
                 <h1></h1>
             </div>
         </section>
+        <div class="tablero">
+            <div class="container-casillas">
+                <div class="casilla"></div>
+                <div class="casilla"></div>
+                <div class="casilla"></div>
+                <div class="casilla"></div>
+            </div>
+            <div class="container-casillas">
+                <div class="casilla"></div>
+                <div class="casilla"></div>
+                <div class="casilla"></div>
+                <div class="casilla"></div>
+            </div>
+            <div class="container-casillas">
+                <div class="casilla"></div>
+                <div class="casilla"></div>
+                <div class="casilla"></div>
+                <div class="casilla"></div>
+            </div>
+            <div class="container-casillas">
+                <div class="casilla"></div>
+                <div class="casilla"></div>
+                <div class="casilla"></div>
+                <div class="casilla"></div>
+            </div>
+        </div>
     </div>
 
     <script src="./game.js"></script>
