--- a/index.html
+++ b/index.html
@@ -40,29 +40,30 @@
             </div>
         </section>
         <div class="tablero">
-            <div class="container-casillas">
-                <div class="casilla"></div>
-                <div class="casilla"></div>
-                <div class="casilla"></div>
-                <div class="casilla"></div>
+            <div class="container-casillas" id="f0"></div>
+            <div class="container-casillas" id="f1">
+                <div class="casilla"  id="f1c1"></div>
+                <div class="casilla"  id="f1c2"></div>
+                <div class="casilla"  id="f1c3"></div>
+                <div class="casilla"  id="f1c4"></div>
             </div>
-            <div class="container-casillas">
-                <div class="casilla"></div>
-                <div class="casilla"></div>
-                <div class="casilla"></div>
-                <div class="casilla"></div>
+            <div class="container-casillas" id="f2">
+                <div class="casilla"  id="f2c1"></div>
+                <div class="casilla"  id="f2c2"></div>
+                <div class="casilla"  id="f2c3"></div>
+                <div class="casilla"  id="f2c4"></div>
             </div>
-            <div class="container-casillas">
-                <div class="casilla"></div>
-                <div class="casilla"></div>
-                <div class="casilla"></div>
-                <div class="casilla"></div>
+            <div class="container-casillas" id="f3">
+                <div class="casilla"  id="f3c1"></div>
+                <div class="casilla"  id="f3c2"></div>
+                <div class="casilla"  id="f3c3"></div>
+                <div class="casilla"  id="f3c4"></div>
             </div>
-            <div class="container-casillas">
-                <div class="casilla"></div>
-                <div class="casilla"></div>
-                <div class="casilla"></div>
-                <div class="casilla"></div>
+            <div class="container-casillas" id="f4">
+                <div class="casilla"  id="f4c1"></div>
+                <div class="casilla"  id="f4c2"></div>
+                <div class="casilla"  id="f4c3"></div>
+                <div class="casilla"  id="f4c4"></div>
             </div>
         </div>
     </div>
