--- a/index.html
+++ b/index.html
@@ -40,31 +40,37 @@
             </div>
         </section>
         <div class="tablero">
-            <div class="container-casillas" id="f0"></div>
-            <div class="container-casillas" id="f1">
-                <div class="casilla"  id="f1c1"></div>
-                <div class="casilla"  id="f1c2"></div>
-                <div class="casilla"  id="f1c3"></div>
-                <div class="casilla"  id="f1c4"></div>
+            <div id="FilaInicio" class="container-casillas">
+                <div id="F0C1" class="casilla-Inicio"></div>
+                <div id="F0C2" class="casilla-Inicio"></div>
+                <div id="F0C3" class="casilla-Inicio"></div>
+                <div id="F0C4" class="casilla-Inicio"></div>
+            </div>    
+            <div id="F1" class="container-casillas">
+                <div id="F1C1" class="casilla"></div>
+                <div id="F1C2" class="casilla"></div>
+                <div id="F1C3" class="casilla"></div>
+                <div id="F1C4" class="casilla"></div>
             </div>
-            <div class="container-casillas" id="f2">
-                <div class="casilla"  id="f2c1"></div>
-                <div class="casilla"  id="f2c2"></div>
-                <div class="casilla"  id="f2c3"></div>
-                <div class="casilla"  id="f2c4"></div>
+            <div id="F2" class="container-casillas">
+                <div id="F2C1" class="casilla"></div>
+                <div id="F2C2" class="casilla"></div>
+                <div id="F2C3" class="casilla"></div>
+                <div id="F2C4" class="casilla"></div>
             </div>
-            <div class="container-casillas" id="f3">
-                <div class="casilla"  id="f3c1"></div>
-                <div class="casilla"  id="f3c2"></div>
-                <div class="casilla"  id="f3c3"></div>
-                <div class="casilla"  id="f3c4"></div>
+            <div id="F3" class="container-casillas">
+                <div id="F3C1" class="casilla"></div>
+                <div id="F3C2" class="casilla"></div>
+                <div id="F3C3" class="casilla"></div>
+                <div id="F3C4" class="casilla"></div>
             </div>
-            <div class="container-casillas" id="f4">
-                <div class="casilla"  id="f4c1"></div>
-                <div class="casilla"  id="f4c2"></div>
-                <div class="casilla"  id="f4c3"></div>
-                <div class="casilla"  id="f4c4"></div>
+            <div id="F4" class="container-casillas">
+                <div id="F4C1" class="casilla"></div>
+                <div id="F4C2" class="casilla"></div>
+                <div id="F4C3" class="casilla"></div>
+                <div id="F4C4" class="casilla"></div>
             </div>
+
         </div>
     </div>
 
