--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
             </div>
         </section>
         <div class="tablero">
-            <div class="container-casillas" id="f0"></div>
+            <div class="container-casillas" id="f0">
+                <div class="casilla"  id="f1c1"></div>
+                <div class="casilla"  id="f1c2"></div>
+                <div class="casilla"  id="f1c3"></div>
+                <div class="casilla"  id="f1c4"></div>
+            </div>
             <div class="container-casillas" id="f1">
                 <div class="casilla"  id="f1c1"></div>
                 <div class="casilla"  id="f1c2"></div>
