--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
         <section class="pregame-container">
             <div class="button" id="play-pause">
                 <h1 id="header_play-pause">PLAY</h1>
-                <h1></h1>
             </div>
-            <div class="button" id="next-tile">
+            <div class="button" id="next-tile_button">
                 <h1 id="header_next-tile">NEXT TILE</h1>
-                <h1></h1>
+                <p id="next-tile"></p>
             </div>
         </section>
         <div class="tablero">
