--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <section class="pregame-container">
             <div class="button" id="play-pause">
-                <h1 id="header_play-pause">PLAY</h1>
+                <h1 id="header_pp">PLAY</h1>
             </div>
             <div class="button" id="next-tile_button">
                 <h1 id="header_next-tile">NEXT TILE</h1>
