--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
             </div>
         </section>
         <div class="tablero">
-            <div class="container-casillas" id="f0">
-                <div class="casilla"  id="f1c1"></div>
-                <div class="casilla"  id="f1c2"></div>
-                <div class="casilla"  id="f1c3"></div>
-                <div class="casilla"  id="f1c4"></div>
+            <div id="F0" class="container-casillas">
+                <div id="F0C1" class="casilla"></div>
+                <div id="F0C2" class="casilla"></div>
+                <div id="F0C3" class="casilla"></div>
+                <div id="F0C4" class="casilla"></div>
             </div>
-            <div class="container-casillas" id="f1">
-                <div class="casilla"  id="f1c1"></div>
-                <div class="casilla"  id="f1c2"></div>
-                <div class="casilla"  id="f1c3"></div>
-                <div class="casilla"  id="f1c4"></div>
+            <div id="F1" class="container-casillas">
+                <div id="F1C1" class="casilla"></div>
+                <div id="F1C2" class="casilla"></div>
+                <div id="F1C3" class="casilla"></div>
+                <div id="F1C4" class="casilla"></div>
             </div>
             <div id="F2" class="container-casillas">
                 <div id="F2C1" class="casilla"></div>
